Update src folder level files

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 
 body {
-  font-family: rubik, sans-serif;
+  font-family: rubik, sans-serif !important;
 }
 
-.form-control-border-radius {
-  border-radius: 15px 0 0 15px;
+* {
+  color: #2c2c2c !important;
 }
 
-.button-border-radius {
-  border-radius: 0 15px 15px 0;
+.form-control-lg {
+  border-radius: 1rem 0 0 1rem;
 }
 
-.h-map {
-  height: 65vh;
+.form-control-lg::placeholder {
+  opacity: 0.5;
+}
+
+.btn-lg {
+  border-radius: 0 1rem 1rem 0;
+}
+
+.mw-form-control {
+  max-width: 30rem;
+}
+
+.vh-map {
+  height: 55vh;
+}
+
+.z-1100 {
+  z-index: 1100;
+}
+
+.search-results-item-title {
+  text-align: center;
+  font-size: 0.625rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  opacity: 0.5;
+}
+
+.search-results-item-text {
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
+
+.card .col:last-child .search-results-item-text {
+  margin-bottom: 0;
 }
 
 .bg-search-bar {
@@ -24,5 +60,42 @@ body {
 @media screen and (min-width: 768px) {
   .bg-search-bar {
     background-image: url('./assets/pattern-bg-desktop.png');
+  }
+
+  .vh-map {
+    height: 60vh;
+  }
+
+  .search-results-item-title {
+    text-align: left;
+  }
+
+  .search-results-item-text {
+    text-align: left;
+    margin-bottom: 0;
+  }
+
+  .card .col:not(:last-child) {
+    flex-basis: fit-content;
+  }
+
+  .v-line {
+    display: block !important;
+    width: 1px;
+    background-color: #000;
+    opacity: 0.15;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .search-results-item-title {
+    font-size: 0.75rem;
+  }
+
+  .search-results-item-text {
+    font-size: 1.625rem;
+    line-height: 1.875rem;
   }
 }
